--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,10 @@ body{
 
 header{
     background-color: #7c9982;
-    width: 95%;
+    width: 97%;
     height: 60px;
-    margin: 10px;
+    margin: 5px;
+    margin-top: 10px;
     border-radius: 30px;
     box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
     -webkit-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
@@ -27,26 +28,27 @@ header{
 }
 
 header p{
-    font-size: 27px;
-    padding: 14px;
+    font-size: 23px;
+    padding: 15px;
     font-weight: bolder;
     font-family: 'Rubik Puddles', cursive;
 }
 
 .navegador{
-    margin-left: 30px;
+    margin-left: 5px;
 }
 
 .navegador ul li{
     display: inline-block;
-    margin-left: 15px;
-    margin-top: 14px;
+    margin-left: 10px;
+    margin-top: 18px;
 
 }
 
 .navegador ul li a img{
-    height: 27px;
-    width: 27px;
+    height: 20px;
+    width: 20px;
+    margin-right: 5px;
 }
 
 /*-----------CONTENEDOR SEARCH--------------------*/
@@ -57,7 +59,7 @@ header p{
     height: 40px;
     width: 80%;
     margin-top: 25px;
-    margin-left: 60px;
+    margin-left: 40px;
 }
 
 .contenedor_search input{
