--- a/css/style.css
+++ b/css/style.css
@@ -6,49 +6,147 @@
 }
 
 body{
-    background-color: #e7caa9;
+    background-color: #ffffff;
 }
 
 /*--------------------HEADER------------------------*/
 
 
-header{
-    background-color: #7c9982;
-    width: 97%;
-    height: 60px;
-    margin: 5px;
-    margin-top: 10px;
-    border-radius: 30px;
-    box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
-    -webkit-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
-    -moz-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
+
+.nav{
+    background-color: #000000;
+
+    --img1: scale(1);
+    --img2: scale(0);
+}
+
+.nav:has( .dropdown:target ){
+    --img1: scale(0);
+    --img2: scale(1);
+
+    --clip:inset(0 0 0 0);
+
+}
+
+.nav__container{
+    width: 90%;
+    margin: 0 auto;
+    height: 70px;
+
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-template-areas: "title img";
+    justify-content: space-between;
+    align-items: center;
+
+    overflow: hidden;
+}
+
+.nav__title{
+    color: #fff;
+    grid-area: title;
+}
+
+
+.nav__menu{
+    grid-area: img;
+    position: relative;
+    z-index: 10;
+
+    transform: var(--img1);
+}
+
+.nav__menu--second{
+    transform: var(--img2);
+}
+
+.nav__icon{
+    width: 30px;
+    display: block;
+}
+
+.dropdown{
+    position: absolute;
+    background-color: #000000;
+    width: 60%;
+    max-width: 300px;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 1em;
+    height: 530px;
+
+    display: grid;
+    align-content:center ;
+    gap: 1rem;
+
+    overflow-y: auto;
+
+
+    clip-path: var(--clip, inset(0 0 100% 100%));
+    transition: clip-path .5s;
+}
+
+.dropdown__list{
+    list-style: none;
+}
+
+.dropdown__link{
+    color: rgb(184, 187, 191);
+    padding: 1em .7em;
+    text-decoration: none;
+    
     display: flex;
-    flex-direction: wrap;
-    justify-content: space-evenly;
+    align-items: center;
+    gap: .6rem;
+
+    position: relative;
+    background-color: var(--bg, transparent);
+    border-radius: 6px;
 }
 
-header p{
-    font-size: 23px;
-    padding: 15px;
-    font-weight: bolder;
-    font-family: 'Rubik Puddles', cursive;
+.dropdown__list:has( :checked ){
+    --rows: 1fr;
+    --rotate: rotate(180deg);
+    --bg: #28303B;
 }
 
-.navegador{
-    margin-left: 5px;
+.dropdown__check{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
 }
 
-.navegador ul li{
-    display: inline-block;
-    margin-left: 10px;
-    margin-top: 18px;
+.dropdown__arrow{
+    margin-left: auto;
+    transform: var(--rotate, 0);
+    transition: .2s transform;
+}
+
+.dropdown__content{
+    display: grid;
+    grid-template-rows: var(--rows, 0fr);
+    transition: .3s grid-template-rows;
+}
+
+.dropdown__sub{
+    overflow: hidden;
 
 }
 
-.navegador ul li a img{
-    height: 20px;
-    width: 20px;
-    margin-right: 5px;
+.dropdown__li{
+    width: 85%;
+    list-style: none;
+    margin-left: auto;
+}
+
+.dropdown__anchor{
+    padding: 1em 0;
+    display: block;
+    color: #B6BABE;
+    text-decoration: none;
 }
 
 /*-----------CONTENEDOR SEARCH--------------------*/
@@ -59,7 +157,7 @@ header p{
     height: 40px;
     width: 80%;
     margin-top: 25px;
-    margin-left: 40px;
+    margin-left: 55px;
 }
 
 .contenedor_search input{
@@ -73,15 +171,11 @@ header p{
 /*---------------CONTENEDOR SECCION------------------*/
 
 .contenedor_seccion{
-    background-color: #7c9982;
+    background-color: #ffffff;
     width: 95%;
     margin: 0 auto;
     height: 800px;
     margin-top: 20px;
-    border-radius: 15px;
-    box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
-    -webkit-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
-    -moz-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -91,7 +185,7 @@ header p{
 
 .carta{
     background-color: brown;
-    height: 170px;
+    height: 180px;
     width: 300px;
     margin: 10px;
     border-radius: 15px;
@@ -116,7 +210,6 @@ header p{
     width: 95%;
     margin: 0px auto;
     margin-top: 20px;
-    border-radius: 15px;
     box-shadow: 5px 5px;
     box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
     -webkit-box-shadow: 11px 10px 50px 0px rgba(0,0,0,0.69);
